fix: body overflow-y

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  overflow-y: hidden;
 }
 
 input {
